--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,52 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Ads</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>Ads</title>
+    <base href="/">
+
+    <style>
+        .splash {
+            opacity: 1;
+            z-index: 1;
+            visibility: visible;
+            transition: opacity 1.4s ease-in-out, visibility 1.4s;
+            position: fixed;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+            background: #1e85c8;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        app-root:not(:empty)+.splash {
+            opacity: 0;
+            visibility: hidden;
+        }
+        
+        .splash_image {
+            width: 100%;
+            max-width: 200px;
+        }
+    </style>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="assets/logo.png">
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root>
+        <div class="splash">
+            <img class="splash_image" src="assets/logo.png" alt="" />
+        </div>
+    </app-root>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </body>
+
 </html>
