--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ads</title>
-    <base href="https://aswathsudhar.github.io/ladiesworld/">
+    <base href="https://mahesth.github.io/ladiesworld/">
     <style>
         .splash {
             opacity: 1;
